fix:jumping header

--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -6,7 +6,7 @@
   z-index: 100;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 10px 16px;
   top: 0;
   position: relative;
   transition: all 0.5 ease;
@@ -20,7 +20,7 @@
 }
 
 .header.sticky {
-  position: fixed;
+  position: sticky;
   top: 0;
   transition: all 0.5 ease;
   height: 50px;
@@ -61,5 +61,10 @@
 @media (max-width: 768px) {
   .burgerChange {
     flex-direction: row;
+  }
+}
+@media (max-width: 346px) {
+  .changeHeaderCont {
+    font-size: x-small;
   }
 }
